# Mojimaru

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
app/: .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  sidecar.rs
app/src/components/: BatchTranslate.tsx  LanguagePicker.tsx  ProgressBar.tsx  ScreenCapture.tsx  Settings.tsx  Sidebar.tsx  SingleImage.tsx  TitleBar.tsx
app/src/lib/: config.ts  sidecar.ts  types.ts
core/: README.md  pyproject.toml
core/src/mojimaru/: __init__.py  __main__.py  cli.py  detect.py  inpaint.py  ocr.py  pipeline.py  protocol.py  sidecar.py  translate.py  typeset.py  utils.py
core/tests/: test_pipeline.py
